Fixed issue where they'd be a scrollbar to.. nothing on mobile

--- a/app/assets/stylesheets/controllers/main.sass
+++ b/app/assets/stylesheets/controllers/main.sass
@@ -7,6 +7,8 @@ html
         @import 'partials/splash'
         @import 'partials/dashboard/core'
 
+        overflow-y: hidden
+
         noscript
             @extend .abs-center
             color: #272727
@@ -34,7 +36,7 @@ html
         bikboo-shell
             @import 'partials/navigation'
 
-            app-document-viewer, app-project-list, app-project-tile, app-project-viewer, app-project-overview
+            app-document-viewer, app-project-list, app-project-tile, app-project-viewer, app-project-overview, app-project-slide-editor, app-project-settings
                 display: block
 
             display: flex
